--- a/website-theme/css/utilities/_queries.css
+++ b/website-theme/css/utilities/_queries.css
@@ -1,6 +1,6 @@
 /* For mobile:like samsung grand(480 * 800): */
 @media screen and (max-width:480px) {
-	.get-started-btn { padding: 20px 50px; }
+	.primary-button { padding: 20px 50px; }
 }
 /* For iphone: */
 @media screen and (max-width:320px) {
