--- a/website-theme/templates/partials/header.html
+++ b/website-theme/templates/partials/header.html
@@ -7,18 +7,13 @@
 <header class="header">
 <div class="navigation">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
-          <nav class="pull">
-            <ul class="top-nav">
-              <li><a href="#getstarted">Get Started <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-              <li><a href="#media">Media <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-              <li><a href="#features">Features <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-              <li class="nav-last"><a href="#design">Design <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
+      {% module "Pull-down Menu" path="/Starnight/modules/global/header.module" %}
     </div>
 </div>
+<div class='container'>
+{% module "Header" path="/Starnight/modules/global/page-header.module" %}
+  
+
+</div>
 </header>
+
